[package]
name = "avahi-sys"
version = "0.9.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
build = "build.rs"

description = "Bindings to Avahi, a library for zero-configuration networking."
repository = "https://bitbucket.org/tari/avahi-sys"
readme = "README.md"
keywords = ["avahi"]
categories = ["api-bindings", "external-ffi-bindings", "network-programming"]
license = "LGPL"

[build-dependencies]
bindgen = "0.22"

[dependencies]
libc = "*"
